done with everything

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".splash"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +21,8 @@
         <activity
             android:name=".farmvisiting"
             android:label="Farm Visiting" />
-        <activity android:name=".declaration"></activity>
+        <activity android:name=".declaration" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
